--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -9,8 +9,10 @@
 # packages, and plugins designed to encourage good coding practices.
 analyzer:
   errors:
+    file_names: ignore
     prefer_const_constructors: ignore
     unused_field: ignore
+    use_build_context_synchronously: ignore
 include: package:flutter_lints/flutter.yaml
 
 linter:
