--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   cloud_firestore: ^5.4.4
   firebase_auth: ^5.3.1
   carousel_slider: ^5.0.0
+  provider: ^6.1.2
 
 dev_dependencies:
   flutter_test:
